--- a/DockerFile
+++ b/DockerFile
@@ -1,4 +1,5 @@
-FROM openjdk:8
-ADD target/springdemo-0.0.1-SNAPSHOT.jar springdemo-0.0.1-SNAPSHOT.jar
+FROM openjdk:8-jdk-alpine
+ARG JAR_FILE=/tare
+COPY {$JAR_FILE}
 EXPOSE 8085
 ENTRYPOINT ["java", "-jar", "springdemo-0.0.1-SNAPSHOT.jar"]
