--- a/Salary/pom.xml
+++ b/Salary/pom.xml
@@ -11,6 +11,7 @@
     <artifactId>Salary</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Salary</name>
+    <packaging>jar</packaging>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>11</java.version>
